implemented functionality of  send & receive message and finally display them

--- a/app/src/main/res/layout/receiver_message_design.xml
+++ b/app/src/main/res/layout/receiver_message_design.xml
@@ -20,7 +20,7 @@
         android:inputType="textLongMessage|textMultiLine"
         android:maxWidth="270dp"
         android:minWidth="50dp"
-        android:text="TextView gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg"
+        android:text="TextView"
         app:layout_constraintBottom_toTopOf="@id/receiverTime"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/guideline2"
