--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -29,7 +29,7 @@
         android:orientation="vertical">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profile_image"
+            android:id="@+id/profileImage"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginStart="10dp"
@@ -51,7 +51,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <TextView
@@ -60,7 +60,7 @@
                 android:padding="5dp"
                 android:text="User Name :"
                 android:textColor="@color/white"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <EditText
@@ -78,7 +78,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <TextView
@@ -87,7 +87,7 @@
                 android:padding="5dp"
                 android:text="About :"
                 android:textColor="@color/white"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <EditText
@@ -134,7 +134,7 @@
             android:layout_marginLeft="50dp"
             android:drawableLeft="@drawable/privacy"
             android:drawablePadding="21dp"
-            android:padding="18dp"
+            android:padding="10dp"
             android:text="Privacy Policy"
             android:textColor="@color/black"
             android:textSize="18sp"
@@ -148,7 +148,7 @@
             android:layout_marginLeft="50dp"
             android:drawableLeft="@drawable/about"
             android:drawablePadding="26.5dp"
-            android:padding="18dp"
+            android:padding="10dp"
             android:text="Privacy Policy"
             android:textColor="@color/black"
             android:textSize="18sp"
@@ -162,7 +162,7 @@
             android:layout_marginLeft="50dp"
             android:drawableLeft="@drawable/invite"
             android:drawablePadding="25dp"
-            android:padding="18dp"
+            android:padding="10dp"
             android:text="Invite a Friend "
             android:textColor="@color/black"
             android:textSize="18sp"
@@ -176,7 +176,7 @@
             android:layout_marginLeft="50dp"
             android:drawableLeft="@drawable/notification"
             android:drawablePadding="20dp"
-            android:padding="18dp"
+            android:padding="10dp"
             android:text="Notification"
             android:textColor="@color/black"
             android:textSize="18sp"
@@ -190,7 +190,7 @@
             android:layout_marginLeft="50dp"
             android:drawableLeft="@drawable/help"
             android:drawablePadding="26.5dp"
-            android:padding="18dp"
+            android:padding="10dp"
             android:text="Help"
             android:textColor="@color/black"
             android:textSize="18sp"
@@ -199,4 +199,5 @@
     </LinearLayout>
 
 </RelativeLayout>
+
 
